[package]
name = "jaso"
version = "0.2.0"
edition = "2021"
description = "Normalizes filenames into Unicode NFC form."
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
rlimit = "0.9.1"
walkdir = "2"
crossbeam-channel = "0.5"
unicode-normalization = "0.1.22"

[profile.release]
panic = "abort"
